//Message for communicating starting position

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

enum Pos {  //we can add more start positions in the future
    LEFT = 0;
    RIGHT = 1;
}

message StartPos {
    Pos pos = 1;
}